# Pdf_read_rename_Agent

./: .gitignore  README.md  config.py  how_use_.md  main.py  pyproject.toml  requirements.txt  test_llm_client.py
src/agent_core/: rename_workflow.py  research_workflow.py  scholar_agent.py
src/handlers/: base_handler.py  docx_handler.py  pdf_handler.py  txt_handler.py
src/services/: llm_client.py  logging_service.py  web_search_service.py
tests/: test_handlers.py  test_llm_client.py  test_rename_workflow.py  test_research_workflow.py  test_scholar_agent.py
